overflow fixed

--- a/src/app/components/ingredient/ingredient.component.scss
+++ b/src/app/components/ingredient/ingredient.component.scss
@@ -70,6 +70,8 @@ input {
   background-color: rgba(37, 37, 37,0.7);
   // padding: 15px;
   overflow: hidden;
+  overflow-y:hidden ;
+  overflow-x: hidden ;
 }
 
 .item img {
