--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -12,15 +12,7 @@ form {
 
 input {
   // overflow: auto;
-  // min-width: 90%;
   // max-width: max-content;
-  // padding: 10px;
-  // // border-radius: 4px;
-  // border: none;
-  // outline: none;
-  // font-size: 2rem;
-  // background-color: rgb(223, 223, 223);
-  // display: inline-block;
   // overflow: hidden;
 
   width: 90%;
@@ -43,11 +35,8 @@ form mat-icon {
   // border: solid 1px green;
   // width: max-content;
   // height: max-content;
-  // font-size: 3rem;
-  // margin-bottom: -10px;
-  // color: rgb(75, 75, 75);
-  // display: inline-block;
   // text-align: center;
+
   width: 8%;
   font-size: 2rem;
   // margin-bottom: -8px;
@@ -72,6 +61,8 @@ form mat-icon {
   background-color: rgba(37, 37, 37, 0.7);
   // padding: 15px;
   overflow: scroll;
+  overflow-y:hidden ;
+  overflow-x: hidden ;
 }
 
 .item img {
