--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+
+  // overflow-y:hidden ;
+  overflow-x: hidden ;
 }
 
 //--------------- CAMBIO SFONDO --------------------
